data preprocessing done ✅

--- a/NLP Project/tweets.ipynb
+++ b/NLP Project/tweets.ipynb
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2e4b4e67",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3cceab6c",
    "metadata": {},
    "outputs": [
@@ -672,7 +672,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,11 +683,400 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "726dc30b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       our deeds are the reason of this #earthquake m...\n",
+       "1                  forest fire near la ronge sask. canada\n",
+       "2       all residents asked to 'shelter in place' are ...\n",
+       "3       13,000 people receive #wildfires evacuation or...\n",
+       "4       just got sent this photo from ruby #alaska as ...\n",
+       "                              ...                        \n",
+       "7608    two giant cranes holding a bridge collapse int...\n",
+       "7609    @aria_ahrary @thetawniest the out of control w...\n",
+       "7610    m1.94 [01:04 utc]?5km s of volcano hawaii. htt...\n",
+       "7611    police investigating after an e-bike collided ...\n",
+       "7612    the latest: more homes razed by northern calif...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lowercasing\n",
+    "\n",
+    "df['text'] = df['text'].str.lower()\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "80075304",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       our deeds are the reason of this #earthquake m...\n",
+       "1                  forest fire near la ronge sask. canada\n",
+       "2       all residents asked to 'shelter in place' are ...\n",
+       "3       13,000 people receive #wildfires evacuation or...\n",
+       "4       just got sent this photo from ruby #alaska as ...\n",
+       "                              ...                        \n",
+       "7608    two giant cranes holding a bridge collapse int...\n",
+       "7609    @aria_ahrary @thetawniest the out of control w...\n",
+       "7610    m1.94 [01:04 utc]?5km s of volcano hawaii. htt...\n",
+       "7611    police investigating after an e-bike collided ...\n",
+       "7612    the latest: more homes razed by northern calif...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove html tags\n",
+    "\n",
+    "import re\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(r'<.*?>', '', x))\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3eaa74dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       our deeds are the reason of this #earthquake m...\n",
+       "1                  forest fire near la ronge sask. canada\n",
+       "2       all residents asked to 'shelter in place' are ...\n",
+       "3       13,000 people receive #wildfires evacuation or...\n",
+       "4       just got sent this photo from ruby #alaska as ...\n",
+       "                              ...                        \n",
+       "7608    two giant cranes holding a bridge collapse int...\n",
+       "7609    @aria_ahrary @thetawniest the out of control w...\n",
+       "7610          m1.94 [01:04 utc]?5km s of volcano hawaii. \n",
+       "7611    police investigating after an e-bike collided ...\n",
+       "7612    the latest: more homes razed by northern calif...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove URLs\n",
+    "\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(r'http\\S+|www\\S+|https\\S+', '', x))\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "80ad5773",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       our deeds are the reason of this earthquake ma...\n",
+       "1                  forest fire near la ronge sask. canada\n",
+       "2       all residents asked to 'shelter in place' are ...\n",
+       "3       13,000 people receive wildfires evacuation ord...\n",
+       "4       just got sent this photo from ruby alaska as s...\n",
+       "                              ...                        \n",
+       "7608    two giant cranes holding a bridge collapse int...\n",
+       "7609      the out of control wild fires in california ...\n",
+       "7610          m1.94 [01:04 utc]?5km s of volcano hawaii. \n",
+       "7611    police investigating after an e-bike collided ...\n",
+       "7612    the latest: more homes razed by northern calif...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove @mentions and '#' symbol\n",
+    "\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(r'@\\w+', '', x)) \n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(r'#', '', x))     \n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fcdd7ef3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       our deeds are the reason of this earthquake ma...\n",
+       "1                   forest fire near la ronge sask canada\n",
+       "2       all residents asked to shelter in place are be...\n",
+       "3        people receive wildfires evacuation orders in...\n",
+       "4       just got sent this photo from ruby alaska as s...\n",
+       "                              ...                        \n",
+       "7608    two giant cranes holding a bridge collapse int...\n",
+       "7609      the out of control wild fires in california ...\n",
+       "7610                        m  utckm s of volcano hawaii \n",
+       "7611    police investigating after an ebike collided w...\n",
+       "7612    the latest more homes razed by northern califo...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove punctuations and numbers\n",
+    "\n",
+    "import string\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(r'[^a-zA-Z\\s]', '', x))  # keep only letters\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "367d297b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       our deeds are the reason of this earthquake ma...\n",
+       "1                   forest fire near la ronge sask canada\n",
+       "2       all residents asked to shelter in place are be...\n",
+       "3       people receive wildfires evacuation orders in ...\n",
+       "4       just got sent this photo from ruby alaska as s...\n",
+       "                              ...                        \n",
+       "7608    two giant cranes holding a bridge collapse int...\n",
+       "7609    the out of control wild fires in california ev...\n",
+       "7610                          m utckm s of volcano hawaii\n",
+       "7611    police investigating after an ebike collided w...\n",
+       "7612    the latest more homes razed by northern califo...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove extra whitespaces\n",
+    "\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(r'\\s+', ' ', x).strip())\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c6bf3f62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sushant Shankar\\.conda\\envs\\dsenv\\Lib\\site-packages\\nltk\\metrics\\association.py:26: UserWarning: A NumPy version >=1.22.4 and <2.3.0 is required for this version of SciPy (detected version 2.3.2)\n",
+      "  from scipy.stats import fisher_exact\n",
+      "[nltk_data] Downloading package punkt to C:\\Users\\Sushant\n",
+      "[nltk_data]     Shankar\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0       [our, deeds, are, the, reason, of, this, earth...\n",
+       "1           [forest, fire, near, la, ronge, sask, canada]\n",
+       "2       [all, residents, asked, to, shelter, in, place...\n",
+       "3       [people, receive, wildfires, evacuation, order...\n",
+       "4       [just, got, sent, this, photo, from, ruby, ala...\n",
+       "                              ...                        \n",
+       "7608    [two, giant, cranes, holding, a, bridge, colla...\n",
+       "7609    [the, out, of, control, wild, fires, in, calif...\n",
+       "7610                   [m, utckm, s, of, volcano, hawaii]\n",
+       "7611    [police, investigating, after, an, ebike, coll...\n",
+       "7612    [the, latest, more, homes, razed, by, northern...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tokenization\n",
+    "\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "\n",
+    "df['text'] = df['text'].apply(lambda x: word_tokenize(x))\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5dad2778",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to C:\\Users\\Sushant\n",
+      "[nltk_data]     Shankar\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0       [deeds, reason, earthquake, may, allah, forgiv...\n",
+       "1           [forest, fire, near, la, ronge, sask, canada]\n",
+       "2       [residents, asked, shelter, place, notified, o...\n",
+       "3       [people, receive, wildfires, evacuation, order...\n",
+       "4       [got, sent, photo, ruby, alaska, smoke, wildfi...\n",
+       "                              ...                        \n",
+       "7608    [two, giant, cranes, holding, bridge, collapse...\n",
+       "7609    [control, wild, fires, california, even, north...\n",
+       "7610                             [utckm, volcano, hawaii]\n",
+       "7611    [police, investigating, ebike, collided, car, ...\n",
+       "7612    [latest, homes, razed, northern, california, w...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# stopwords removal\n",
+    "\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "df['text'] = df['text'].apply(lambda x: [word for word in x if word not in stop_words])\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2327972f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to C:\\Users\\Sushant\n",
+      "[nltk_data]     Shankar\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to C:\\Users\\Sushant\n",
+      "[nltk_data]     Shankar\\AppData\\Roaming\\nltk_data...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0       [deed, reason, earthquake, may, allah, forgive...\n",
+       "1           [forest, fire, near, la, ronge, sask, canada]\n",
+       "2       [resident, asked, shelter, place, notified, of...\n",
+       "3       [people, receive, wildfire, evacuation, order,...\n",
+       "4       [got, sent, photo, ruby, alaska, smoke, wildfi...\n",
+       "                              ...                        \n",
+       "7608    [two, giant, crane, holding, bridge, collapse,...\n",
+       "7609    [control, wild, fire, california, even, northe...\n",
+       "7610                             [utckm, volcano, hawaii]\n",
+       "7611    [police, investigating, ebike, collided, car, ...\n",
+       "7612    [latest, home, razed, northern, california, wi...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lemmatization (normalize words like \"running\" → \"run\")\n",
+    "\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "nltk.download('wordnet')\n",
+    "nltk.download('omw-1.4')\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "df['text'] = df['text'].apply(lambda x: [lemmatizer.lemmatize(word) for word in x])\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "37869a25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              deed reason earthquake may allah forgive u\n",
+       "1                   forest fire near la ronge sask canada\n",
+       "2       resident asked shelter place notified officer ...\n",
+       "3       people receive wildfire evacuation order calif...\n",
+       "4       got sent photo ruby alaska smoke wildfire pour...\n",
+       "                              ...                        \n",
+       "7608    two giant crane holding bridge collapse nearby...\n",
+       "7609    control wild fire california even northern par...\n",
+       "7610                                 utckm volcano hawaii\n",
+       "7611    police investigating ebike collided car little...\n",
+       "7612    latest home razed northern california wildfire...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# join back tokens into sentence\n",
+    "\n",
+    "df['text'] = df['text'].apply(lambda x: ' '.join(x))\n",
+    "df['text']"
+   ]
   }
  ],
  "metadata": {
