--- a/NLP Project/tweets.ipynb
+++ b/NLP Project/tweets.ipynb
@@ -683,8 +683,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "726dc30b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       our deeds are the reason of this #earthquake m...\n",
+       "1                  forest fire near la ronge sask. canada\n",
+       "2       all residents asked to 'shelter in place' are ...\n",
+       "3       13,000 people receive #wildfires evacuation or...\n",
+       "4       just got sent this photo from ruby #alaska as ...\n",
+       "                              ...                        \n",
+       "7608    two giant cranes holding a bridge collapse int...\n",
+       "7609    @aria_ahrary @thetawniest the out of control w...\n",
+       "7610    m1.94 [01:04 utc]?5km s of volcano hawaii. htt...\n",
+       "7611    police investigating after an e-bike collided ...\n",
+       "7612    the latest: more homes razed by northern calif...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lowercasing\n",
+    "\n",
+    "df['text'] = df['text'].str.lower()\n",
+    "df['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "80075304",
    "metadata": {},
    "outputs": [
     {
@@ -710,41 +745,6 @@
     }
    ],
    "source": [
-    "#lowercasing\n",
-    "\n",
-    "df['text'] = df['text'].str.lower()\n",
-    "df['text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "80075304",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       our deeds are the reason of this #earthquake m...\n",
-       "1                  forest fire near la ronge sask. canada\n",
-       "2       all residents asked to 'shelter in place' are ...\n",
-       "3       13,000 people receive #wildfires evacuation or...\n",
-       "4       just got sent this photo from ruby #alaska as ...\n",
-       "                              ...                        \n",
-       "7608    two giant cranes holding a bridge collapse int...\n",
-       "7609    @aria_ahrary @thetawniest the out of control w...\n",
-       "7610    m1.94 [01:04 utc]?5km s of volcano hawaii. htt...\n",
-       "7611    police investigating after an e-bike collided ...\n",
-       "7612    the latest: more homes razed by northern calif...\n",
-       "Name: text, Length: 7613, dtype: object"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# remove html tags\n",
     "\n",
     "import re\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3eaa74dd",
    "metadata": {},
    "outputs": [
@@ -775,7 +775,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "80ad5773",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "fcdd7ef3",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "367d297b",
    "metadata": {},
    "outputs": [
@@ -882,7 +882,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "c6bf3f62",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "5dad2778",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "2327972f",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1006,8 @@
       "[nltk_data]     Shankar\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package omw-1.4 to C:\\Users\\Sushant\n",
-      "[nltk_data]     Shankar\\AppData\\Roaming\\nltk_data...\n"
+      "[nltk_data]     Shankar\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     },
     {
@@ -1026,7 +1027,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "37869a25",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1067,7 @@
        "Name: text, Length: 7613, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,6 +1077,73 @@
     "\n",
     "df['text'] = df['text'].apply(lambda x: ' '.join(x))\n",
     "df['text']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a516535",
+   "metadata": {},
+   "source": [
+    "## Feature Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1d242311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using TF-IDF\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6eaab01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf = TfidfVectorizer(\n",
+    "    max_features=5000,   # keep top 5000 words\n",
+    "    ngram_range=(1,2),   # unigrams + bigrams\n",
+    "    stop_words='english' # extra stopword removal\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "802a0a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit and transform\n",
+    "\n",
+    "X = tfidf.fit_transform(df['text'])\n",
+    "y = df['target']   # labels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "38ee2e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7613, 5000)\n",
+      "(7613,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)\n",
+    "print(y.shape)"
    ]
   }
  ],
