--- a/NLP Project/tweets.ipynb
+++ b/NLP Project/tweets.ipynb
@@ -1697,7 +1697,7 @@
    "id": "3cf384fe",
    "metadata": {},
    "source": [
-    "## Model Building"
+    "## Model Building and Evaluation"
    ]
   },
   {
